client/src/generated/client/src/grammars/SpiralScriptParser.ts
// Generated from client/src/grammars/SpiralScript.g4 by ANTLR 4.13.2
// noinspection ES6UnusedImports,JSUnusedGlobalSymbols,JSUnusedLocalSymbols

import {
	ATN,
	ATNDeserializer, DecisionState, DFA, FailedPredicateException,
	RecognitionException, NoViableAltException, BailErrorStrategy,
	Parser, ParserATNSimulator,
	RuleContext, ParserRuleContext, PredictionMode, PredictionContextCache,
	TerminalNode, RuleNode,
	Token, TokenStream,
	Interval, IntervalSet
} from 'antlr4';
import SpiralScriptListener from "./SpiralScriptListener.js";
// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;

export default class SpiralScriptParser extends Parser {
	public static readonly T__0 = 1;
	public static readonly T__1 = 2;
	public static readonly T__2 = 3;
	public static readonly T__3 = 4;
	public static readonly T__4 = 5;
	public static readonly T__5 = 6;
	public static readonly IMPORT = 7;
	public static readonly FROM = 8;
	public static readonly FUNCTION = 9;
	public static readonly CLASS = 10;
	public static readonly EXTENDS = 11;
	public static readonly CONST = 12;
	public static readonly LET = 13;
	public static readonly VAR = 14;
	public static readonly AWAIT = 15;
	public static readonly QUANTUM = 16;
	public static readonly PHI_CALC = 17;
	public static readonly HADAMARD = 18;
	public static readonly CNOT = 19;
	public static readonly PAULI_X = 20;
	public static readonly PAULI_Y = 21;
	public static readonly PAULI_Z = 22;
	public static readonly PHI_GATE = 23;
	public static readonly MEASURE = 24;
	public static readonly PHI_CONSTANT = 25;
	public static readonly SPIRAL_CONSTANT = 26;
	public static readonly RESONANCE = 27;
	public static readonly ENTROPY = 28;
	public static readonly HARMONIC = 29;
	public static readonly TIMES = 30;
	public static readonly DIVIDE = 31;
	public static readonly PLUS = 32;
	public static readonly MINUS = 33;
	public static readonly EQUALS = 34;
	public static readonly NOT_EQUALS = 35;
	public static readonly LESS_THAN = 36;
	public static readonly GREATER_THAN = 37;
	public static readonly AND = 38;
	public static readonly OR = 39;
	public static readonly NOT = 40;
	public static readonly NUMBER = 41;
	public static readonly STRING = 42;
	public static readonly BOOLEAN = 43;
	public static readonly IDENTIFIER = 44;
	public static readonly WS = 45;
	public static readonly LINE_COMMENT = 46;
	public static readonly BLOCK_COMMENT = 47;
	public static readonly LPAREN = 48;
	public static readonly RPAREN = 49;
	public static readonly LBRACE = 50;
	public static readonly RBRACE = 51;
	public static readonly LBRACKET = 52;
	public static readonly RBRACKET = 53;
	public static readonly SEMICOLON = 54;
	public static readonly COMMA = 55;
	public static readonly DOT = 56;
	public static readonly COLON = 57;
	public static readonly ASSIGN = 58;
	public static override readonly EOF = Token.EOF;
	public static readonly RULE_program = 0;
	public static readonly RULE_statement = 1;
	public static readonly RULE_declaration = 2;
	public static readonly RULE_importDeclaration = 3;
	public static readonly RULE_functionDeclaration = 4;
	public static readonly RULE_classDeclaration = 5;
	public static readonly RULE_variableDeclaration = 6;
	public static readonly RULE_quantumBlock = 7;
	public static readonly RULE_quantumStatement = 8;
	public static readonly RULE_quantumGate = 9;
	public static readonly RULE_phiGate = 10;
	public static readonly RULE_quantumMeasurement = 11;
	public static readonly RULE_phiCalculation = 12;
	public static readonly RULE_phiExpression = 13;
	public static readonly RULE_blockStatement = 14;
	public static readonly RULE_expression = 15;
	public static readonly RULE_primary = 16;
	public static readonly RULE_parameterList = 17;
	public static readonly RULE_parameter = 18;
	public static readonly RULE_expressionList = 19;
	public static readonly RULE_identifierList = 20;
	public static readonly RULE_type = 21;
	public static readonly RULE_identifier = 22;
	public static readonly literalNames: (string | null)[] = [ null, "'number'",
                                                            "'string'",
                                                            "'boolean'",
                                                            "'PhiSeed'",
                                                            "'QuantumState'",
                                                            "'TrustUnit'",
                                                            "'import'",
                                                            "'from'", "'function'",
                                                            "'class'", "'extends'",
                                                            "'const'", "'let'",
                                                            "'var'", "'await'",
                                                            "'quantum'",
                                                            "'phi_calc'",
                                                            null, null,
                                                            null, null,
                                                            null, null,
                                                            "'measure'",
                                                            null, null,
                                                            null, "'entropy'",
                                                            "'harmonic'",
                                                            "'*'", "'/'",
                                                            "'+'", "'-'",
                                                            "'=='", "'!='",
                                                            "'<'", "'>'",
                                                            "'&&'", "'||'",
                                                            "'!'", null,
                                                            null, null,
                                                            null, null,
                                                            null, null,
                                                            "'('", "')'",
                                                            "'{'", "'}'",
                                                            "'['", "']'",
                                                            "';'", "','",
                                                            "'.'", "':'",
                                                            "'='" ];
	public static readonly symbolicNames: (string | null)[] = [ null, null,
                                                             null, null,
                                                             null, null,
                                                             null, "IMPORT",
                                                             "FROM", "FUNCTION",
                                                             "CLASS", "EXTENDS",
                                                             "CONST", "LET",
                                                             "VAR", "AWAIT",
                                                             "QUANTUM",
                                                             "PHI_CALC",
                                                             "HADAMARD",
                                                             "CNOT", "PAULI_X",
                                                             "PAULI_Y",
                                                             "PAULI_Z",
                                                             "PHI_GATE",
                                                             "MEASURE",
                                                             "PHI_CONSTANT",
                                                             "SPIRAL_CONSTANT",
                                                             "RESONANCE",
                                                             "ENTROPY",
                                                             "HARMONIC",
                                                             "TIMES", "DIVIDE",
                                                             "PLUS", "MINUS",
                                                             "EQUALS", "NOT_EQUALS",
                                                             "LESS_THAN",
                                                             "GREATER_THAN",
                                                             "AND", "OR",
                                                             "NOT", "NUMBER",
                                                             "STRING", "BOOLEAN",
                                                             "IDENTIFIER",
                                                             "WS", "LINE_COMMENT",
                                                             "BLOCK_COMMENT",
                                                             "LPAREN", "RPAREN",
                                                             "LBRACE", "RBRACE",
                                                             "LBRACKET",
                                                             "RBRACKET",
                                                             "SEMICOLON",
                                                             "COMMA", "DOT",
                                                             "COLON", "ASSIGN" ];
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"program", "statement", "declaration", "importDeclaration", "functionDeclaration",
		"classDeclaration", "variableDeclaration", "quantumBlock", "quantumStatement",
		"quantumGate", "phiGate", "quantumMeasurement", "phiCalculation", "phiExpression",
		"blockStatement", "expression", "primary", "parameterList", "parameter",
		"expressionList", "identifierList", "type", "identifier",
	];
	public get grammarFileName(): string { return "SpiralScript.g4"; }
	public get literalNames(): (string | null)[] { return SpiralScriptParser.literalNames; }
	public get symbolicNames(): (string | null)[] { return SpiralScriptParser.symbolicNames; }
	public get ruleNames(): string[] { return SpiralScriptParser.ruleNames; }
	public get serializedATN(): number[] { return SpiralScriptParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(this, SpiralScriptParser._ATN, SpiralScriptParser.DecisionsToDFA, new PredictionContextCache());
	}
	// @RuleVersion(0)
	public program(): ProgramContext {
		let localctx: ProgramContext = new ProgramContext(this, this._ctx, this.state);
		this.enterRule(localctx, 0, SpiralScriptParser.RULE_program);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 49;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 100923008) !== 0) || ((((_la - 40)) & ~0x1F) === 0 && ((1 << (_la - 40)) & 287) !== 0)) {
				{
				{
				this.state = 46;
				this.statement();
				}
				}
				this.state = 51;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 52;
			this.match(SpiralScriptParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public statement(): StatementContext {
		let localctx: StatementContext = new StatementContext(this, this._ctx, this.state);
		this.enterRule(localctx, 2, SpiralScriptParser.RULE_statement);
		try {
			this.state = 60;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case 7:
			case 9:
			case 10:
			case 12:
			case 13:
			case 14:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 54;
				this.declaration();
				}
				break;
			case 15:
			case 25:
			case 26:
			case 40:
			case 41:
			case 42:
			case 43:
			case 44:
			case 48:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 55;
				this.expression(0);
				this.state = 56;
				this.match(SpiralScriptParser.SEMICOLON);
				}
				break;
			case 16:
				this.enterOuterAlt(localctx, 3);
				{
				this.state = 58;
				this.quantumBlock();
				}
				break;
			case 17:
				this.enterOuterAlt(localctx, 4);
				{
				this.state = 59;
				this.phiCalculation();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public declaration(): DeclarationContext {
		let localctx: DeclarationContext = new DeclarationContext(this, this._ctx, this.state);
		this.enterRule(localctx, 4, SpiralScriptParser.RULE_declaration);
		try {
			this.state = 66;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case 7:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 62;
				this.importDeclaration();
				}
				break;
			case 9:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 63;
				this.functionDeclaration();
				}
				break;
			case 10:
				this.enterOuterAlt(localctx, 3);
				{
				this.state = 64;
				this.classDeclaration();
				}
				break;
			case 12:
			case 13:
			case 14:
				this.enterOuterAlt(localctx, 4);
				{
				this.state = 65;
				this.variableDeclaration();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public importDeclaration(): ImportDeclarationContext {
		let localctx: ImportDeclarationContext = new ImportDeclarationContext(this, this._ctx, this.state);
		this.enterRule(localctx, 6, SpiralScriptParser.RULE_importDeclaration);
		try {
			this.state = 82;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 3, this._ctx) ) {
			case 1:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 68;
				this.match(SpiralScriptParser.IMPORT);
				this.state = 69;
				this.match(SpiralScriptParser.LBRACE);
				this.state = 70;
				this.identifierList();
				this.state = 71;
				this.match(SpiralScriptParser.RBRACE);
				this.state = 72;
				this.match(SpiralScriptParser.FROM);
				this.state = 73;
				this.match(SpiralScriptParser.STRING);
				this.state = 74;
				this.match(SpiralScriptParser.SEMICOLON);
				}
				break;
			case 2:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 76;
				this.match(SpiralScriptParser.IMPORT);
				this.state = 77;
				this.identifier();
				this.state = 78;
				this.match(SpiralScriptParser.FROM);
				this.state = 79;
				this.match(SpiralScriptParser.STRING);
				this.state = 80;
				this.match(SpiralScriptParser.SEMICOLON);
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public functionDeclaration(): FunctionDeclarationContext {
		let localctx: FunctionDeclarationContext = new FunctionDeclarationContext(this, this._ctx, this.state);
		this.enterRule(localctx, 8, SpiralScriptParser.RULE_functionDeclaration);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 84;
			this.match(SpiralScriptParser.FUNCTION);
			this.state = 85;
			this.identifier();
			this.state = 86;
			this.match(SpiralScriptParser.LPAREN);
			this.state = 88;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===44) {
				{
				this.state = 87;
				this.parameterList();
				}
			}

			this.state = 90;
			this.match(SpiralScriptParser.RPAREN);
			this.state = 93;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===57) {
				{
				this.state = 91;
				this.match(SpiralScriptParser.COLON);
				this.state = 92;
				this.type_();
				}
			}

			this.state = 95;
			this.blockStatement();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public classDeclaration(): ClassDeclarationContext {
		let localctx: ClassDeclarationContext = new ClassDeclarationContext(this, this._ctx, this.state);
		this.enterRule(localctx, 10, SpiralScriptParser.RULE_classDeclaration);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 97;
			this.match(SpiralScriptParser.CLASS);
			this.state = 98;
			this.identifier();
			this.state = 101;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===11) {
				{
				this.state = 99;
				this.match(SpiralScriptParser.EXTENDS);
				this.state = 100;
				this.identifier();
				}
			}

			this.state = 103;
			this.blockStatement();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public variableDeclaration(): VariableDeclarationContext {
		let localctx: VariableDeclarationContext = new VariableDeclarationContext(this, this._ctx, this.state);
		this.enterRule(localctx, 12, SpiralScriptParser.RULE_variableDeclaration);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 105;
			_la = this._input.LA(1);
			if(!((((_la) & ~0x1F) === 0 && ((1 << _la) & 28672) !== 0))) {
			this._errHandler.recoverInline(this);
			}
			else {
				this._errHandler.reportMatch(this);
			    this.consume();
			}
			this.state = 106;
			this.identifier();
			this.state = 109;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===57) {
				{
				this.state = 107;
				this.match(SpiralScriptParser.COLON);
				this.state = 108;
				this.type_();
				}
			}

			this.state = 113;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===58) {
				{
				this.state = 111;
				this.match(SpiralScriptParser.ASSIGN);
				this.state = 112;
				this.expression(0);
				}
			}

			this.state = 115;
			this.match(SpiralScriptParser.SEMICOLON);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public quantumBlock(): QuantumBlockContext {
		let localctx: QuantumBlockContext = new QuantumBlockContext(this, this._ctx, this.state);
		this.enterRule(localctx, 14, SpiralScriptParser.RULE_quantumBlock);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 117;
			this.match(SpiralScriptParser.QUANTUM);
			this.state = 118;
			this.match(SpiralScriptParser.LBRACE);
			this.state = 122;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 33292288) !== 0)) {
				{
				{
				this.state = 119;
				this.quantumStatement();
				}
				}
				this.state = 124;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 125;
			this.match(SpiralScriptParser.RBRACE);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public quantumStatement(): QuantumStatementContext {
		let localctx: QuantumStatementContext = new QuantumStatementContext(this, this._ctx, this.state);
		this.enterRule(localctx, 16, SpiralScriptParser.RULE_quantumStatement);
		try {
			this.state = 130;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case 18:
			case 19:
			case 20:
			case 21:
			case 22:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 127;
				this.quantumGate();
				}
				break;
			case 24:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 128;
				this.quantumMeasurement();
				}
				break;
			case 23:
				this.enterOuterAlt(localctx, 3);
				{
				this.state = 129;
				this.phiGate();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public quantumGate(): QuantumGateContext {
		let localctx: QuantumGateContext = new QuantumGateContext(this, this._ctx, this.state);
		this.enterRule(localctx, 18, SpiralScriptParser.RULE_quantumGate);
		try {
			this.state = 164;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case 18:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 132;
				this.match(SpiralScriptParser.HADAMARD);
				this.state = 133;
				this.match(SpiralScriptParser.LPAREN);
				this.state = 134;
				this.expression(0);
				this.state = 135;
				this.match(SpiralScriptParser.RPAREN);
				this.state = 136;
				this.match(SpiralScriptParser.SEMICOLON);
				}
				break;
			case 19:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 138;
				this.match(SpiralScriptParser.CNOT);
				this.state = 139;
				this.match(SpiralScriptParser.LPAREN);
				this.state = 140;
				this.expression(0);
				this.state = 141;
				this.match(SpiralScriptParser.COMMA);
				this.state = 142;
				this.expression(0);
				this.state = 143;
				this.match(SpiralScriptParser.RPAREN);
				this.state = 144;
				this.match(SpiralScriptParser.SEMICOLON);
				}
				break;
			case 20:
				this.enterOuterAlt(localctx, 3);
				{
				this.state = 146;
				this.match(SpiralScriptParser.PAULI_X);
				this.state = 147;
				this.match(SpiralScriptParser.LPAREN);
				this.state = 148;
				this.expression(0);
				this.state = 149;
				this.match(SpiralScriptParser.RPAREN);
				this.state = 150;
				this.match(SpiralScriptParser.SEMICOLON);
				}
				break;
			case 21:
				this.enterOuterAlt(localctx, 4);
				{
				this.state = 152;
				this.match(SpiralScriptParser.PAULI_Y);
				this.state = 153;
				this.match(SpiralScriptParser.LPAREN);
				this.state = 154;
				this.expression(0);
				this.state = 155;
				this.match(SpiralScriptParser.RPAREN);
				this.state = 156;
				this.match(SpiralScriptParser.SEMICOLON);
				}
				break;
			case 22:
				this.enterOuterAlt(localctx, 5);
				{
				this.state = 158;
				this.match(SpiralScriptParser.PAULI_Z);
				this.state = 159;
				this.match(SpiralScriptParser.LPAREN);
				this.state = 160;
				this.expression(0);
				this.state = 161;
				this.match(SpiralScriptParser.RPAREN);
				this.state = 162;
				this.match(SpiralScriptParser.SEMICOLON);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public phiGate(): PhiGateContext {
		let localctx: PhiGateContext = new PhiGateContext(this, this._ctx, this.state);
		this.enterRule(localctx, 20, SpiralScriptParser.RULE_phiGate);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 166;
			this.match(SpiralScriptParser.PHI_GATE);
			this.state = 167;
			this.match(SpiralScriptParser.LPAREN);
			this.state = 168;
			this.expression(0);
			this.state = 171;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===55) {
				{
				this.state = 169;
				this.match(SpiralScriptParser.COMMA);
				this.state = 170;
				this.expression(0);
				}
			}

			this.state = 173;
			this.match(SpiralScriptParser.RPAREN);
			this.state = 174;
			this.match(SpiralScriptParser.SEMICOLON);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public quantumMeasurement(): QuantumMeasurementContext {
		let localctx: QuantumMeasurementContext = new QuantumMeasurementContext(this, this._ctx, this.state);
		this.enterRule(localctx, 22, SpiralScriptParser.RULE_quantumMeasurement);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 176;
			this.match(SpiralScriptParser.MEASURE);
			this.state = 177;
			this.match(SpiralScriptParser.LPAREN);
			this.state = 178;
			this.expressionList();
			this.state = 179;
			this.match(SpiralScriptParser.RPAREN);
			this.state = 180;
			this.match(SpiralScriptParser.SEMICOLON);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public phiCalculation(): PhiCalculationContext {
		let localctx: PhiCalculationContext = new PhiCalculationContext(this, this._ctx, this.state);
		this.enterRule(localctx, 24, SpiralScriptParser.RULE_phiCalculation);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 182;
			this.match(SpiralScriptParser.PHI_CALC);
			this.state = 183;
			this.match(SpiralScriptParser.LBRACE);
			this.state = 184;
			this.phiExpression();
			this.state = 185;
			this.match(SpiralScriptParser.RBRACE);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public phiExpression(): PhiExpressionContext {
		let localctx: PhiExpressionContext = new PhiExpressionContext(this, this._ctx, this.state);
		this.enterRule(localctx, 26, SpiralScriptParser.RULE_phiExpression);
		try {
			this.state = 207;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 13, this._ctx) ) {
			case 1:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 187;
				this.expression(0);
				this.state = 188;
				this.match(SpiralScriptParser.TIMES);
				this.state = 189;
				this.match(SpiralScriptParser.PHI_CONSTANT);
				}
				break;
			case 2:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 191;
				this.expression(0);
				this.state = 192;
				this.match(SpiralScriptParser.RESONANCE);
				this.state = 193;
				this.expression(0);
				}
				break;
			case 3:
				this.enterOuterAlt(localctx, 3);
				{
				this.state = 195;
				this.match(SpiralScriptParser.ENTROPY);
				this.state = 196;
				this.match(SpiralScriptParser.LPAREN);
				this.state = 197;
				this.expression(0);
				this.state = 198;
				this.match(SpiralScriptParser.RPAREN);
				}
				break;
			case 4:
				this.enterOuterAlt(localctx, 4);
				{
				this.state = 200;
				this.match(SpiralScriptParser.HARMONIC);
				this.state = 201;
				this.match(SpiralScriptParser.LPAREN);
				this.state = 202;
				this.expression(0);
				this.state = 203;
				this.match(SpiralScriptParser.COMMA);
				this.state = 204;
				this.expression(0);
				this.state = 205;
				this.match(SpiralScriptParser.RPAREN);
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public blockStatement(): BlockStatementContext {
		let localctx: BlockStatementContext = new BlockStatementContext(this, this._ctx, this.state);
		this.enterRule(localctx, 28, SpiralScriptParser.RULE_blockStatement);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 209;
			this.match(SpiralScriptParser.LBRACE);
			this.state = 213;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 100923008) !== 0) || ((((_la - 40)) & ~0x1F) === 0 && ((1 << (_la - 40)) & 287) !== 0)) {
				{
				{
				this.state = 210;
				this.statement();
				}
				}
				this.state = 215;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 216;
			this.match(SpiralScriptParser.RBRACE);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}

	public expression(): ExpressionContext;
	public expression(_p: number): ExpressionContext;
	// @RuleVersion(0)
	public expression(_p?: number): ExpressionContext {
		if (_p === undefined) {
			_p = 0;
		}
